// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestReviewFromRegistrant requests a review on the PR in the payload 1`] = `
Array [
  Array [
    Object {
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
      "reviewers": Array [
        "JasonEtco",
      ],
    },
  ],
]
`;

exports[`requestReviewFromRegistrant requests a review on the PR with the specified number 1`] = `
Array [
  Array [
    Object {
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
      "reviewers": Array [
        "JasonEtco",
      ],
    },
  ],
]
`;

exports[`requestReviewFromRegistrant requests a review on the PR with the specified title 1`] = `
Array [
  Array [
    Object {
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
      "reviewers": Array [
        "JasonEtco",
      ],
    },
  ],
]
`;
